app/enterprise/2.1.x/index.md
---
title: Documentation for Kong Gateway (Enterprise)
subtitle: Formerly known as Kong Enterprise, now part of Kong Konnect
skip_read_time: true
is_homepage: true
---

<div class="docs-grid">

  <h2 class="docs-grid-section-title">Foundations</h2>

  <div class="docs-grid-block">
    <h3><a href="/enterprise/{{page.kong_version}}/introduction">Introduction to Kong Enterprise</a></h3>
    <p>Learn about the pieces that make up Kong Enterprise and get familiar with some key concepts.</p>
    <a href="/enterprise/{{page.kong_version}}/introduction">Learn about Kong Enterprise &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><a href="/enterprise/{{page.kong_version}}/deployment/installation/overview">Installation</a></h3>
    <p>Learn how to install Kong Enterprise with your chosen deployment method.</p>
    <a href="/enterprise/{{page.kong_version}}/deployment/installation/overview">Choose Deployment Method &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><a href="/getting-started-guide/latest/overview">Getting Started</a></h3>
    <p>Whether you’re a Community or an Enterprise Kong user, use this guide to familiarize yourself with Kong concepts and learn how to use important features and capabilities.</p>
    <a href="/getting-started-guide/latest/overview">Get Started &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><a href="/enterprise/changelog">Changelog</a></h3>
    <p>Review the details of the changes made to each version of Kong Enterprise.</p>
    <a href="/enterprise/changelog/">See changelog &rarr;</a>
  </div>

  <h2 class="docs-grid-section-title">Popular Guides and References</h2>

  <div class="docs-grid-block">
    <h3><a href="/enterprise/{{page.kong_version}}/admin-api">Admin API</a></h3>
    <p>Harness Kong Enterprise's features with the Admin API.</p>
    <a href="/enterprise/{{page.kong_version}}/admin-api">Learn more &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><a href="/enterprise/{{page.kong_version}}/developer-portal/introduction">Kong Dev Portal</a></h3>
    <p>Explore how to enable, configure, and customize the Kong Dev Portal.</p>
    <a href="/enterprise/{{page.kong_version}}/developer-portal/introduction">Learn more &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><a href="/enterprise/{{page.kong_version}}/deployment/kong-for-kubernetes-enterprise">Kong for Kubernetes Enterprise</a></h3>
    <p>Get started with Kong for Kubernetes Enterprise.</p>
    <a href="/enterprise/{{page.kong_version}}/deployment/kong-for-kubernetes-enterprise">Learn more &rarr;</a>
  </div>

  <div class="docs-grid-block">
    <h3><a href="/enterprise/{{page.kong_version}}/brain-immunity/install-configure">Kong Brain & Kong Immunity</a></h3>
    <p>Install and Configure Kong Brain and Kong Immunity.</p>
    <a href="/enterprise/{{page.kong_version}}/brain-immunity/install-configure">Learn more &rarr;</a>
  </div>

</div>
